<resources>
    <string name="app_name">MagistrateProjectUI</string>
    <string name="hint_password">Password (optional)</string>
    <string name="hint_login">Email</string>
    <string name="button_login">Login</string>
    <string name="button_registration">Registration</string>
    <string name="input_login_and_password">Please input your login and password</string>
    <string name="title_activity_user">UserActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_record_book">Record book number</string>
    <string name="button_next">Next</string>
    <string name="input_record_number">Please input your record number</string>
    <string name="input_feel_registration_data">Please feel reg data</string>
    <string name="hint_fio">Input you FIO</string>
    <string name="hint_repeat_password">Please repeat password</string>
    <string name="nav_about_system">About system</string>
    <string name="nav_results">Results</string>
    <string name="nav_classmates">Classmates</string>
    <string name="nav_questions">Questions</string>
    <string name="nav_textbook">Textbook</string>
    <string name="textbook_fragment">TextBook</string>
    <string name="go_to_test">Перейти к тесту</string>
    <string name="decline">Закрыть</string>
    <string name="nav_tests">Tests</string>
</resources>
