<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<group>
    <item android:id="@+id/nav_spinner"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="Article"
        app:actionLayout="@layout/navigation_view_spinner_menu_item">
    </item>
</group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_textbook"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_textbook" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_questions" />
        <item
            android:id="@+id/nav_classmates"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_classmates" />
        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_tests" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_about_system" />

    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
