<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/switcher_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/text_record_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_record_number"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_text_record_book"
            android:layout_below="@+id/text_record_book"
            android:hint="@string/hint_record_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_next"
            android:layout_below="@+id/edit_text_record_book"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_feel_registration_data"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textview_record_book"
            android:layout_below="@id/text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />
        <EditText
            android:id="@+id/edit_text_fio"
            android:layout_below="@+id/textview_record_book"
            android:hint="@string/hint_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"/>
        <EditText
            android:id="@+id/edit_text_login"
            android:layout_below="@+id/edit_text_fio"
            android:hint="@string/hint_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/edit_text_password"
            android:layout_below="@+id/edit_text_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/edit_text_password_repeat"
            android:layout_below="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/button_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_password_repeat"
            android:text="@string/button_registration"
            />
    </RelativeLayout>
</ViewSwitcher>