<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wgjuh.magistrateprojectui.activity.LoginActivity">
    <TextView
        android:id="@+id/text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_login_and_password"
        android:textSize="20sp"
        android:layout_marginTop="150dp"/>
    <EditText
        android:id="@+id/edit_text_record_book"
        android:layout_above="@+id/buttons_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/edit_text_login"
        android:layout_below="@+id/text_login"
        android:hint="@string/hint_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/edit_text_password"
        android:layout_below="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>
    <LinearLayout
        android:id="@+id/buttons_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_below="@+id/edit_text_password">
        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/button_registration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_registration"
            android:layout_weight="5"/>
    </LinearLayout>
</RelativeLayout>
